--- a/jour-5/guess/package.json
+++ b/jour-5/guess/package.json
@@ -1,7 +1,6 @@
 {
   "name": "guess",
   "version": "1.0.0",
-  "description": "",
   "main": "guess.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "prompt": "^1.1.0"
-  }
+  },
+  "description": ""
 }
